[gd_scene load_steps=3 format=3 uid="uid://cnfbi4odleb8g"]

[ext_resource type="Script" uid="uid://cnagdyggy8ubr" path="res://square.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://cd02lbh6i3pdt" path="res://icon.svg" id="1_ig7tw"]

[node name="Square" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="Mouse" type="Sprite2D" parent="."]
modulate = Color(0, 1, 0, 1)
position = Vector2(576, 24)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_ig7tw")

[node name="Cat" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(576, 324)
rotation = 3.14159
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_ig7tw")

[node name="MouseCurve" type="Line2D" parent="."]
z_index = -1
default_color = Color(0, 1, 0, 0.15686275)

[node name="CatCurve" type="Line2D" parent="."]
z_index = -1
default_color = Color(1, 0, 0, 0.15686275)

[node name="ubar" type="HScrollBar" parent="."]
offset_left = 12.0
offset_top = 71.0
offset_right = 196.0
offset_bottom = 90.0
max_value = 50.0
value = 5.0
rounded = true

[node name="vbar" type="HScrollBar" parent="."]
offset_left = 12.0
offset_top = 154.0
offset_right = 196.0
offset_bottom = 173.0
max_value = 50.0
value = 5.0
rounded = true

[node name="restart" type="Button" parent="."]
offset_left = 23.0
offset_top = 542.0
offset_right = 178.0
offset_bottom = 634.0
text = "restart for changes
to take effect"

[node name="ulabel" type="Label" parent="."]
offset_left = 12.0
offset_top = 10.0
offset_right = 195.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "u = 5"
horizontal_alignment = 1

[node name="vlabel" type="Label" parent="."]
offset_left = 12.0
offset_top = 94.0
offset_right = 196.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "v = 5"
horizontal_alignment = 1

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
